@@ -1927,7 +1927,11 @@ bb_loop_depth (const_basic_block bb)
 void
 mark_loop_for_removal (loop_p loop)
 {
+#ifdef ENABLE_CHECKING
+  loop->former_header = loop->header;
+#endif
   loop->header = NULL;
   loop->latch = NULL;
   loops_state_set (LOOPS_NEED_FIXUP);
 }
+
